--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ input{
     border: none;
     padding: 24px;
     margin: 10px;
-/*     background: transparent; */
+    background: transparent;
     box-shadow:0px 3px 15px rgbs(84,84,84 0.1);
     font-size: 40px;
     text-align: right;
